--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "projen": "npx projen"
   },
   "devDependencies": {
+    "@types/conventional-changelog-config-spec": "^2.1.1",
+    "@types/fs-extra": "^8",
+    "@types/glob": "^7.2.0",
+    "@types/ini": "^1.3.31",
     "@types/jest": "^27.4.0",
     "@types/node": "^12",
+    "@types/semver": "^7.3.9",
+    "@types/yargs": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
+    "all-contributors-cli": "^6.20.0",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -32,6 +39,7 @@
     "jest": "^27.4.5",
     "jest-junit": "^13",
     "json-schema": "^0.4.0",
+    "markmac": "^0.1.124",
     "npm-check-updates": "^12",
     "projen": "^0.47.13",
     "standard-version": "^9",
@@ -39,6 +47,35 @@
     "ts-node": "^9",
     "typescript": "^4.5.4"
   },
+  "dependencies": {
+    "@iarna/toml": "^2.2.5",
+    "case": "^1.6.3",
+    "chalk": "*",
+    "conventional-changelog-config-spec": "^2.1.0",
+    "fs-extra": "^10.0.0",
+    "glob": "^7",
+    "ini": "^2.0.0",
+    "projen": "^0.47.13",
+    "semver": "^7.3.5",
+    "shx": "^0.3.3",
+    "xmlbuilder2": "^3.0.2",
+    "yaml": "^1.10.2",
+    "yargs": "^17.3.1"
+  },
+  "bundledDependencies": [
+    "@iarna/toml",
+    "case",
+    "chalk",
+    "conventional-changelog-config-spec",
+    "fs-extra",
+    "glob",
+    "ini",
+    "semver",
+    "shx",
+    "xmlbuilder2",
+    "yaml",
+    "yargs"
+  ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
