--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "mca-lazylib-ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marciocadev/mca-lazylib-ts.git"
+  },
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
